# Agent-Salon

./: .env.example  .gitignore  README.md  pyproject.toml
config/: salon.example.yaml
conversations/: README.md
docs/: design-notes.md
memory/: gemini-private.md  openai-private.md  shared.md
memory/proposed/: README.md
personas/: gemini.md  openai.md
prompts/: code-review.md  reflection.md  relay.md
src/: README.md
src/agent_salon/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  context.py  curator_input.py  domain.py  orchestrator.py  transcript.py
src/agent_salon/providers/: __init__.py  gemini.py  openai.py
templates/: README.md  data-README.md
templates/conversations/: README.md
templates/memory/: gemini-private.md  openai-private.md  shared.md
templates/memory/proposed/: README.md
templates/personas/: gemini.md  openai.md
templates/personas/examples/: rowan-cartographer.md  sol-workshop-host.md  vesper-critic.md
tests/: test_bootstrap.py  test_config.py  test_curator_input.py  test_gemini_provider.py  test_orchestrator.py  test_transcript.py
