[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-salon"
version = "0.1.0"
description = "A human-curated conversation space for distinct AI personas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "google-genai>=2.3.0",
  "openai",
  "python-dotenv",
  "PyYAML",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
salon = "agent_salon.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

